--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,13 @@ psycopg2-binary>=2.9.9
 # AI / Claude
 anthropic>=0.18.0
 
+# Google Sheets
+gspread>=5.12.0
+oauth2client>=4.1.3
+
+# Telegram
+requests>=2.31.0
+
 # Config
 python-dotenv>=1.0.0
 PyYAML>=6.0.1
