--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ psutil>=5.9.0
 # Database
 psycopg2-binary>=2.9.9
 
-# AI / Claude
-anthropic>=0.18.0
+# AI / Gemini
+google-genai>=1.0.0
 
 # Google Sheets
 gspread>=5.12.0
@@ -19,3 +19,4 @@ requests>=2.31.0
 # Config
 python-dotenv>=1.0.0
 PyYAML>=6.0.1
+setuptools
