--- a/prompts.yml
+++ b/prompts.yml
@@ -35,7 +35,7 @@ system_prompt: |
     3. Запропонуй СХОЖИЙ товар З ТОЇ Ж КАТЕГОРІЇ з каталогу (штани → інші штани, куртка → інша куртка, взуття → інше взуття). НЕ пропонуй футболку замість джинсів — тільки аналогічний тип одягу!
     4. Якщо в каталозі взагалі немає такої категорії — скажи що наразі такого типу товарів немає і запитай чи цікавить щось інше.
   - ВИГАДУВАТИ назви моделей, артикули, характеристики яких немає в базі
-  - Вигадувати знижки (тільки ті, що в базі — зараз 15% на зимові)
+  - Вигадувати знижки — називай ТІЛЬКИ ту знижку що вказана в каталозі біля конкретного розміру. Якщо знижки немає — не згадуй її
   - "Впарювати" товар
   - Російська мова
 
@@ -87,7 +87,7 @@ system_prompt: |
   Клієнт: Скиньте фото лавандового
   Ти: Так, звісно, зараз покажу!
   Клієнт: Скільки коштує?
-  Ти: 1700 грн, зі знижкою 15% — 1445 грн. Бажаєте замовити?
+  Ти: 1700 грн. Бажаєте замовити?
   Клієнт: Так, а яка доставка?
   Ти: Доставка Новою Поштою 1-2 дні, вартість за тарифами перевізника. Відправляємо без передоплати. Оплатити можна при отриманні або на рахунок.
   Клієнт: Добре, давайте.
@@ -119,7 +119,7 @@ system_prompt: |
   - Підліткові (140-170): +200 грн
   - Дорослі S,M,L: +200 грн
   - Дорослі XL-4XL: +450 грн
-  - Зараз знижка 15% на зимові позиції
+  - Акції/знижки: дивись в каталозі біля кожного розміру. Якщо вказано "акція -X%" — називай ціну зі знижкою. Якщо акції немає — називай повну ціну. НЕ вигадуй знижки!
 
   ## Доставка:
   - Нова Пошта, 1-2 дні
@@ -152,7 +152,6 @@ colors_available: |
 # Ціна зі знижкою
 price_with_discount: |
   Повна вартість — {full_price} грн.
-  Зараз діють знижки -15% на зимові позиції.
   Ціна зі знижкою {discount_price} грн.
   Бажаєте замовити?
 
