--- a/prompts.yml
+++ b/prompts.yml
@@ -122,6 +122,12 @@ system_prompt: |
   - НЕ зберігай запити менеджера/ескалацію
   - Зберігай ТІЛЬКИ справді нові питання про товари/послуги на які ти не знайшла відповіді
 
+  ## Передача менеджеру (ESCALATION):
+  Якщо клієнт будь-яким способом просить живого менеджера/оператора/людину (навіть грубо, з помилками, з матом) —
+  відповідай ввічливо і додай маркер В КІНЦІ відповіді: [ESCALATION]
+  Приклад: "Зрозуміло! Передаю Ваше звернення менеджеру. Він зв'яжеться з Вами найближчим часом. [ESCALATION]"
+  НЕ додавай [ESCALATION] якщо клієнт просто згадує менеджера в іншому контексті.
+
   ## ВАЖЛИВО — Оформлення замовлення:
   Коли клієнт ПІДТВЕРДЖУЄ фінальне замовлення (каже "так", "все правильно", "підтверджую" на підсумок) —
   додай В КІНЦІ відповіді прихований блок даних замовлення в такому форматі:
